Fixed Button alignments and result.

--- a/assets/css/findr.css
+++ b/assets/css/findr.css
@@ -2,3 +2,11 @@ table.dataTable > tbody > tr.child span.dtr-title {
     font-weight: normal;
     font-size: inherit;
 }
+
+.toplink {
+    display: none;
+}
+
+.table th, .table td{
+    line-height: 12px;
+}
